# sdg-pipeline

./: .gitignore  NOTES.md  README.md  config.yaml  master_plan.md  pyproject.toml  pyrightconfig.json  requirements-dev.txt  run.bat  run.py  run.sh  test_phase4.py  validate_output.py  verify_colors.py  visualize.py
assets/distractors/: cube.glb  icosphere.glb  monkey.glb  sphere.glb  torus.glb
assets/models/: cherry_coke.glb  fanta.glb  sprite.glb
pipeline/: __init__.py  annotation_writer.py  asset_registry.py  mask_extractor.py  pipeline.py  randomizer.py  renderer.py  scene_builder.py
scripts/: install_deps.sh  merge_coco.py  render_parallel.sh  setup_base_scene.py  test_phase5.py  test_phase6.py  test_randomizer.py  test_scene.py
